// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mdx > parses story file fixtures/Children.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": undefined,
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": undefined,
  },
  "stories": [
    {
      "location": [Ln 1, Col 0],
      "name": "Children prop, children content",
      "nameForId": undefined,
    },
    {
      "location": [Ln 8, Col 0],
      "name": "Children prop, empty body",
      "nameForId": undefined,
    },
    {
      "location": [Ln 10, Col 0],
      "name": "Children prop, no body",
      "nameForId": undefined,
    },
    {
      "location": [Ln 12, Col 0],
      "name": "No children prop, children content",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx > parses story file fixtures/Mdx1WithStories.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 6, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "Example/MDX with Stories",
  },
  "stories": [
    {
      "location": [Ln 10, Col 0],
      "name": "MDX first story",
      "nameForId": undefined,
    },
    {
      "location": [Ln 14, Col 0],
      "name": "MDX second story",
      "nameForId": undefined,
    },
    {
      "location": [Ln 18, Col 0],
      "name": "MDX Story 3",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx > parses story file fixtures/Spread.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": undefined,
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": undefined,
  },
  "stories": [
    {
      "location": [Ln 15, Col 0],
      "name": undefined,
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx > parses story file project/v6/src/autoTitle/mdx/MdxMeta.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 3, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v6/src/autoTitle/mdx/MdxMetaAndStory.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 3, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": undefined,
  },
  "stories": [
    {
      "location": [Ln 5, Col 0],
      "name": "Primary",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx > parses story file project/v6/src/autoTitle/mdx/MdxStory.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": undefined,
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": undefined,
  },
  "stories": [
    {
      "location": [Ln 3, Col 0],
      "name": "Primary",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx > parses story file project/v6/src/autoTitle/mdx/PlainMarkdown.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": undefined,
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/autoTitle/mdx/DocNodeAndParent.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 3, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "mdx",
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/autoTitle/mdx/WithTitle.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 3, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "mdx/Non-stories MDX file with specified title",
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/autoTitle/mdx/WithTitle.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 3, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "mdx/With specified title",
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/autoTitle/mdx/WithoutTitle.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": undefined,
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/features/attached/AttachedToPathNeedsNormalization.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": "Attached to non-normalized path",
    "of": {
      "importPath": "./../attached/././AttachPoint.stories",
    },
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/features/attached/AttachedToPathWithExtension.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": "Attached to path with extension",
    "of": {
      "importPath": "./AttachPoint.stories.js",
    },
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/features/attached/AttachedWithName.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": "Manually specified name",
    "of": {
      "importPath": "./AttachPoint.stories",
    },
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/features/attached/AttachedWithNameWithSlashes.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": "Name/with/slashes",
    "of": {
      "importPath": "./AttachPoint.stories",
    },
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/features/attached/AttachedWithoutName.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": undefined,
    "of": {
      "importPath": "./AttachPoint.stories",
    },
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/features/attached/Autodoc.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": undefined,
    "of": {
      "importPath": "./AttachPoint.stories",
    },
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/features/attached/Sample.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": undefined,
    "of": {
      "importPath": "./AttachPoint.stories",
    },
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/features/attached/autodoc-override/AttachPoint.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": undefined,
    "of": {
      "importPath": "./AttachPoint.stories",
    },
    "tags": undefined,
    "title": undefined,
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/stories/CsfWithMdx.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 5, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "Example/MDX importing CSF",
  },
  "stories": [
    {
      "location": [Ln 11, Col 0],
      "name": "Basic",
      "nameForId": "Basic",
    },
    {
      "location": [Ln 21, Col 0],
      "name": "Story name from MDX",
      "nameForId": "Basic 2",
    },
    {
      "location": [Ln 25, Col 0],
      "name": "Basic 3",
      "nameForId": "Basic 3",
    },
  ],
}
`;

exports[`mdx > parses story file project/v7/src/stories/CustomId.stories.mdx 1`] = `
{
  "meta": {
    "id": "manually-specified-mdx-id",
    "location": [Ln 3, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "Example/Custom ID MDX",
  },
  "stories": [
    {
      "location": [Ln 7, Col 0],
      "name": "Story",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx > parses story file project/v7/src/stories/DocsOnly.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 3, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "Example/MDX Docs Only",
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/stories/DocsOnlyTop.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 3, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "MDX Docs at top level",
  },
  "stories": [],
}
`;

exports[`mdx > parses story file project/v7/src/stories/Mdx2WithStories.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 12, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "Example/MDX with Stories",
  },
  "stories": [
    {
      "location": [Ln 14, Col 0],
      "name": "MDX first story",
      "nameForId": undefined,
    },
    {
      "location": [Ln 18, Col 0],
      "name": "MDX second story",
      "nameForId": undefined,
    },
    {
      "location": [Ln 22, Col 0],
      "name": "MDX Story 3",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx > parses story file project/v7/src/stories/MdxWithStoriesTop.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "MDX with stories, top",
  },
  "stories": [
    {
      "location": [Ln 6, Col 0],
      "name": "MDX with stories, top",
      "nameForId": undefined,
    },
  ],
}
`;

exports[`mdx > parses story file project/v7/src/stories/Precedence.stories.mdx 1`] = `
{
  "meta": {
    "id": undefined,
    "location": [Ln 4, Col 0],
    "name": undefined,
    "of": undefined,
    "tags": undefined,
    "title": "Example/Precedence",
  },
  "stories": [
    {
      "location": [Ln 20, Col 0],
      "name": "Story with name, story, body",
      "nameForId": "Small",
    },
    {
      "location": [Ln 26, Col 0],
      "name": "Story with name, body",
      "nameForId": undefined,
    },
  ],
}
`;
